# poll-bot

./: .gitignore  Pipfile  README  README.md  Readme.md  dodo.py  pyproject.toml  requirements.txt  tox.ini
docs/source/: autodoc.rst  conf.py  index.rst
src/: admin.py  exam.py  exam_statistics.py  main.py  messages.py  start.py  statistics.py  tests_exam.py  tests_statistics.py  user.py
test/: tests_exam.py  tests_statistics.py
